--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="description">
       <center>
-        <span>ESTE DETALLE ES PARA TI MARBELYS :)</span><br>
+        <span>ESTE DETALLE ES PARA TI :)</span><br>
       
       <span style="font-size: 12px;">
         Este ramito de flores amarillas es para ti por si nadie te lo dio o no
